--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
         android:theme="@style/Theme.Firebase">
+        <activity android:name=".Waiting"></activity>
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCboXG2Y51DnhJV0ju8rfg2Ml7LatQWZmI" />
-        <activity android:name=".confirmlogout"></activity>
+
+        <activity android:name=".confirmlogout" />
         <activity android:name=".Vs" />
         <activity android:name=".odotcoder" />
         <activity android:name=".odotproject" />
