--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
         android:theme="@style/Theme.Firebase">
-        <activity android:name=".Waiting"></activity>
+        <activity android:name=".Joinroom"></activity>
+        <activity android:name=".Createorjoin" />
+        <activity android:name=".Waiting" />
 
         <meta-data
             android:name="com.google.android.gms.version"
