--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
         android:theme="@style/Theme.Firebase">
-        <activity android:name=".Lost"></activity>
+        <activity android:name=".Tie"></activity>
+        <activity android:name=".Lost" />
         <activity android:name=".Win" />
         <activity android:name=".Place1" />
         <activity android:name=".Joinroom" />
