--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
         android:theme="@style/Theme.Firebase">
-        <activity android:name=".Tie"></activity>
+        <activity android:name=".WhoWon"></activity>
+        <activity android:name=".Tie" />
         <activity android:name=".Lost" />
         <activity android:name=".Win" />
         <activity android:name=".Place1" />
         <activity android:name=".Joinroom" />
         <activity android:name=".Createorjoin" />
         <activity android:name=".Waiting" />
+        <activity android:name=".Vs2" />
+        <activity android:name=".Place2" />
 
         <meta-data
             android:name="com.google.android.gms.version"
