--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
         android:theme="@style/Theme.Firebase">
-        <activity android:name=".WhoWon"></activity>
+        <activity android:name=".Shop"></activity>
+        <activity android:name=".BuyVip" />
+        <activity android:name=".WhoWon" />
         <activity android:name=".Tie" />
         <activity android:name=".Lost" />
         <activity android:name=".Win" />
