--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.firebase">
+
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
-    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-
-
-
 
     <application
         android:allowBackup="true"
@@ -16,7 +14,8 @@
         android:label="@string/app_name"
         android:supportsRtl="false"
         android:theme="@style/Theme.Firebase">
-        <activity android:name=".Settings"></activity>
+        <activity android:name=".ChangeName"></activity>
+        <activity android:name=".Settings" />
         <activity android:name=".Leaderboards" />
         <activity android:name=".fif" />
         <activity android:name=".Shop" />
@@ -29,12 +28,13 @@
         <activity android:name=".Vs2" />
         <activity android:name=".Place2" />
 
-        <receiver android:name=".Rec"
+        <receiver
+            android:name=".Rec"
             android:enabled="true"
             android:exported="true"
             android:permission="android.permission.BROADCAST_SMS">
-        <intent-filter android:priority="999">
-                <action android:name ="android.provider.Telephony.SMS_RECEIVED"/>
+            <intent-filter android:priority="999">
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
 
