--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:icon="@mipmap/appicon"
         android:label="@string/app_name"
         android:supportsRtl="false"
-        android:theme="@style/Theme.Firebase">
+        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
         <activity android:name=".ChangeName"></activity>
         <activity android:name=".Settings" />
         <activity android:name=".Leaderboards" />
